k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: acquisitions
  labels:
    app.kubernetes.io/name: acquisitions-api
    app.kubernetes.io/part-of: acquisitions
    environment: production
